[package]
name = "jwt-auth"
version = "0.1.0"
authors = ["red <red.avtovo@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-service = "1.0.0"

jsonwebtoken = "6"
r2d2 = "0.8.2"
r2d2_postgres = "0.16.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "*"

log = "0.4.8"
env_logger = "0.7.1"

sha2="0.8.1"
bcrypt="0.6.1"