[package]
name = "jwt-auth"
version = "0.1.0"
authors = ["red <red.avtovo@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.0.2"
actix-service = "1.0.0"

jsonwebtoken = "8"
r2d2 = "0.8.2"
r2d2_postgres = "0.18.0"

uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "*"

log = "0.4.8"
env_logger = "0.8.2"

sha2="0.9.3"
bcrypt="0.9.0"